# cpp-patterns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.adoc
src/copy_swap_idiom/: main.cpp
src/object_layout_deduction/: main.cpp
targets/: CMakeLists.txt
targets/consteval_value/: CMakeLists.txt  main.cpp
targets/find_type/: CMakeLists.txt  main.cpp
targets/inside_copy_swap_idiom/: CMakeLists.txt  main.cpp
targets/object_layout_deduction/: CMakeLists.txt  main.cpp
targets/specialize_template_from_template/: CMakeLists.txt  main.cpp
targets/transient_proxy_rtty/: CMakeLists.txt  main.cpp
targets/type_literals/: CMakeLists.txt  main.cpp
